[package]
name = "kyurid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = { git = "https://github.com/catornot/rrplug.git" }
rodio = "0.17.1"
once_cell = "*"

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]