[package]
name = "kyurid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = "2.0.0"
rodio = "0.17.1"
once_cell = "*"
log = "*"
rand = "0.8.5"

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]